# pluginforge

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md
examples/: README.md
examples/simple_app/: app.py
examples/simple_app/config/: app.yaml
examples/simple_app/config/i18n/: de.yaml  en.yaml
examples/simple_app/config/plugins/: hello.yaml
examples/simple_app/plugins/: hello_plugin.py
pluginforge/: __init__.py  alembic_ext.py  base.py  config.py  discovery.py  fastapi_ext.py  i18n.py  lifecycle.py  manager.py  security.py
tests/: conftest.py  test_alembic_ext.py  test_base.py  test_config.py  test_discovery.py  test_fastapi_ext.py  test_i18n.py  test_lifecycle.py  test_manager.py  test_security.py
